# fireblocks-cli

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  DCO.txt  Makefile  README.md  REUSE.toml  VERSION.txt  build.sh  main.py  poetry.lock.license  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: general_issue.md
.github/workflows/: dco.yml  dispatch_homebrew_update.yml  publish-homebrew.yml  publish-pypi.yml  pypi.yml  release.yml
docs/devops/: release_workflow.md
docs/spec/: configure.md
fireblocks_cli/: __init__.py  config.py  crypto.py  main.py
fireblocks_cli/commands/: configure.py  profile_debug.py
fireblocks_cli/utils/: profile.py
scripts/: __init__.py  add_author.py  check_signoff.sh  generate_contributors.sh  get_changed_files.sh  get_copyright.sh  sync_init_with_pyproject.py
tests/: test_configure_edit.py
tests/auth/: test_auth_factory.py  test_file_provider.py
