[project]
name = "fireblocks-cli"
version = "0.1.0"
description = "A CLI tool for managing Fireblocks API keys and profiles"
authors = [{ name = "Kamon Shohei" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "pyyaml"
]

[project.scripts]
fireblocks-cli = "fireblocks_cli.main:app"

