[project]
name = "fireblocks-cli"
version = "0.1.1"
description = "An unofficial CLI for managing Fireblocks services."
authors = [{ name = "Kamon Shohei" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "pyyaml"
]

[project.scripts]
fireblocks-cli = "fireblocks_cli.main:app"
